// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Map Project cards Should render more than one project correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-9"
    >
      <p
        className="project-grid__count"
      >
        <p>
          2 Projects
        </p>
      </p>
    </div>
    <div
      className="col-3"
    >
      <Link
        className="project-grid__add"
        replace={false}
        to="/cadre/projects/create"
      >
        ADD NEW PROJECT
      </Link>
    </div>
  </div>
  <div
    className="project-card__grid"
  >
    <withRouter(ProjectCard)
      key="1"
      project={
        Object {
          "channels": null,
          "id": 1,
          "manager": "-LAmk78f7GyBWkt2UWpb",
          "name": "test project",
          "technologies": "NodeJs,Laravel",
          "type": "internal",
        }
      }
    />
    <withRouter(ProjectCard)
      key="1"
      project={
        Object {
          "channels": null,
          "id": 1,
          "manager": "-LAmk78f7GyBWkt2UWpb",
          "name": "test project",
          "technologies": "NodeJs,Laravel",
          "type": "internal",
        }
      }
    />
  </div>
</div>
`;

exports[`Test Map Project cards should render correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-9"
    >
      <p
        className="project-grid__count"
      >
        <p>
          1 Project
        </p>
      </p>
    </div>
    <div
      className="col-3"
    >
      <Link
        className="project-grid__add"
        replace={false}
        to="/cadre/projects/create"
      >
        ADD NEW PROJECT
      </Link>
    </div>
  </div>
  <div
    className="project-card__grid"
  >
    <withRouter(ProjectCard)
      key="1"
      project={
        Object {
          "channels": null,
          "id": 1,
          "manager": "-LAmk78f7GyBWkt2UWpb",
          "name": "test project",
          "technologies": "NodeJs,Laravel",
          "type": "internal",
        }
      }
    />
  </div>
</div>
`;
